edits in Sect 2.2

--- a/paper.tex
+++ b/paper.tex
@@ -441,8 +441,8 @@ sustained efficient reacceleration with time.
 momentum-space diffusion coefficient due to second-order Fermi-II
 acceleration scales as
 \begin{eqnarray}
-  D_{pp} \propto p\dot{p}
-  \propto p^2\langle kc\rangle_{\mathcal{W}} \left(\frac{\Vph}{c}\right)^2,
+  D_{pp} \sim p\dot{p}
+  \sim p^2\langle kc\rangle_{\mathcal{W}} \left(\frac{\Vph}{c}\right)^2,
 \label{eq:dpp_oom}
 \end{eqnarray}
 since the force on a particle due to Fermi-II acceleration scales as
